--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -13,7 +13,7 @@
 
     <script src="_framework/blazor.webassembly.js" autostart="true"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/mupdf/mupdf.js"></script>
+    <!--<script src="lib/mupdf/mupdf.js"></script>-->
     <script src="lib/script.js"></script>
     <script src="lib/typewriter-effect/typewriter.js"></script>
     <script src="_content/Toolbelt.Blazor.PWA.Updater.Service/script.min.js"></script>
@@ -46,27 +46,27 @@
 
     </script>
     
-    <!--<script type="module">
-        import { BrotliDecode } from './decode.min.js';
-        Blazor.start({
-            loadBootResource: function (type, name, defaultUri, integrity) {
-                if (type !== 'dotnetjs' /*&& location.hostname !== 'localhost'*/) {
-                    return (async function () {
-                        const response = await fetch(defaultUri + '.br', { cache: 'no-cache' });
-                        if (!response.ok) {
-                            throw new Error(response.statusText);
-                        }
-                        const originalResponseBuffer = await response.arrayBuffer();
-                        const originalResponseArray = new Int8Array(originalResponseBuffer);
-                        const decompressedResponseArray = BrotliDecode(originalResponseArray);
-                        const contentType = type ===
-                            'dotnetwasm' ? 'application/wasm' : 'application/octet-stream';
-                        return new Response(decompressedResponseArray,
-                            { headers: { 'content-type': contentType } });
-                    })();
-                }
-            }
-        });
-    </script>-->
+    <script type="module">
+        //import { BrotliDecode } from './decode.min.js';
+        //Blazor.start({
+        //    loadBootResource: function (type, name, defaultUri, integrity) {
+        //        if (type !== 'dotnetjs' /*&& location.hostname !== 'localhost'*/) {
+        //            return (async function () {
+        //                const response = await fetch(defaultUri + '.br', { cache: 'no-cache' });
+        //                if (!response.ok) {
+        //                    throw new Error(response.statusText);
+        //                }
+        //                const originalResponseBuffer = await response.arrayBuffer();
+        //                const originalResponseArray = new Int8Array(originalResponseBuffer);
+        //                const decompressedResponseArray = BrotliDecode(originalResponseArray);
+        //                const contentType = type ===
+        //                    'dotnetwasm' ? 'application/wasm' : 'application/octet-stream';
+        //                return new Response(decompressedResponseArray,
+        //                    { headers: { 'content-type': contentType } });
+        //            })();
+        //        }
+        //    }
+        //});
+    </script>
 </body>
 </html>
