--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
-    <script src="_framework/blazor.webassembly.js" autostart="true"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!--<script src="lib/mupdf/mupdf.js"></script>-->
     <script src="lib/script.js"></script>
@@ -47,26 +47,26 @@
     </script>
     
     <script type="module">
-        //import { BrotliDecode } from './decode.min.js';
-        //Blazor.start({
-        //    loadBootResource: function (type, name, defaultUri, integrity) {
-        //        if (type !== 'dotnetjs' /*&& location.hostname !== 'localhost'*/) {
-        //            return (async function () {
-        //                const response = await fetch(defaultUri + '.br', { cache: 'no-cache' });
-        //                if (!response.ok) {
-        //                    throw new Error(response.statusText);
-        //                }
-        //                const originalResponseBuffer = await response.arrayBuffer();
-        //                const originalResponseArray = new Int8Array(originalResponseBuffer);
-        //                const decompressedResponseArray = BrotliDecode(originalResponseArray);
-        //                const contentType = type ===
-        //                    'dotnetwasm' ? 'application/wasm' : 'application/octet-stream';
-        //                return new Response(decompressedResponseArray,
-        //                    { headers: { 'content-type': contentType } });
-        //            })();
-        //        }
-        //    }
-        //});
+        import { BrotliDecode } from './decode.min.js';
+        Blazor.start({
+            loadBootResource: function (type, name, defaultUri, integrity) {
+                if (type !== 'dotnetjs' /*&& location.hostname !== 'localhost'*/) {
+                    return (async function () {
+                        const response = await fetch(defaultUri + '.br', { cache: 'no-cache' });
+                        if (!response.ok) {
+                            throw new Error(response.statusText);
+                        }
+                        const originalResponseBuffer = await response.arrayBuffer();
+                        const originalResponseArray = new Int8Array(originalResponseBuffer);
+                        const decompressedResponseArray = BrotliDecode(originalResponseArray);
+                        const contentType = type ===
+                            'dotnetwasm' ? 'application/wasm' : 'application/octet-stream';
+                        return new Response(decompressedResponseArray,
+                            { headers: { 'content-type': contentType } });
+                    })();
+                }
+            }
+        });
     </script>
 </body>
 </html>
