--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -11,19 +11,16 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 
-    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="true"></script>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!--<script src="lib/mupdf/mupdf.js"></script>-->
     <script src="lib/script.js"></script>
     <script src="lib/typewriter-effect/typewriter.js"></script>
-    <script src="_content/Toolbelt.Blazor.PWA.Updater.Service/script.min.js"></script>
-    <link href="_content/Toolbelt.Blazor.PWA.Updater/Toolbelt.Blazor.PWA.Updater.bundle.scp.css" rel="stylesheet" />
 
     <link href="lib/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="lib/style.css" rel="stylesheet">
 </head>
-
 
 <body>
 
